{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 38,
  "lineage": "b3a1bbb7-2779-32a5-8704-722012913d79",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "weather_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c76bd4bd302b30ec",
            "arn": "arn:aws:ec2:eu-west-2:861276124001:instance/i-030f933d22a8c7a49",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile",
            "id": "i-030f933d22a8c7a49",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "weather-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03b82c02621c29336",
            "private_dns": "ip-10-0-1-22.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.22",
            "public_dns": "ec2-3-8-146-134.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.146.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07aae712245753be7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-01e345bb0d73846a4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0955548fa8e58ea26",
            "tags": {
              "Name": "WeatherDashboardInstance"
            },
            "tags_all": {
              "Name": "WeatherDashboardInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01e345bb0d73846a4"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2_role",
            "aws_key_pair.weather_key",
            "aws_security_group.weather_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.weather_vpc",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "weather_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:861276124001:internet-gateway/igw-00eee321bcb8a4898",
            "id": "igw-00eee321bcb8a4898",
            "owner_id": "861276124001",
            "tags": {
              "Name": "weather-igw"
            },
            "tags_all": {
              "Name": "weather-igw"
            },
            "vpc_id": "vpc-0c3fb617b6ff1035f"
          },
          "dependencies": [
            "aws_vpc.weather_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:861276124001:route-table/rtb-0566eb37a2c69ea44",
            "id": "rtb-0566eb37a2c69ea44",
            "owner_id": "861276124001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00eee321bcb8a4898",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "weather-public-route-table"
            },
            "tags_all": {
              "Name": "weather-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3fb617b6ff1035f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.weather_igw",
            "aws_vpc.weather_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efeafb7fd2bb38d8",
            "route_table_id": "rtb-0566eb37a2c69ea44",
            "subnet_id": "subnet-0955548fa8e58ea26"
          },
          "dependencies": [
            "aws_internet_gateway.weather_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.weather_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "weather_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:861276124001:security-group/sg-01e345bb0d73846a4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e345bb0d73846a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "terraform-20241213161719185700000001",
            "name_prefix": "terraform-",
            "owner_id": "861276124001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WeatherDashboardSG"
            },
            "tags_all": {
              "Name": "WeatherDashboardSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3fb617b6ff1035f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.weather_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:861276124001:subnet/subnet-0955548fa8e58ea26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0955548fa8e58ea26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "861276124001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weather-public-subnet"
            },
            "tags_all": {
              "Name": "weather-public-subnet"
            },
            "vpc_id": "vpc-0c3fb617b6ff1035f"
          },
          "dependencies": [
            "aws_vpc.weather_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "weather_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:861276124001:vpc/vpc-0c3fb617b6ff1035f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bfbb5e5f95797394",
            "default_route_table_id": "rtb-0888587181ed40465",
            "default_security_group_id": "sg-0d7e7c6739b6ad7d0",
            "dhcp_options_id": "dopt-06424361d5f908e88",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c3fb617b6ff1035f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0888587181ed40465",
            "owner_id": "861276124001",
            "tags": {
              "Name": "weather-vpc"
            },
            "tags_all": {
              "Name": "weather-vpc"
            }
          }
        }
      ]
    }
  ]
}